--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,2 +1,9 @@
 $white: #fff;
 $black: #000;
+
+$card-gray: #FAFAFA;
+$border-gray: #E0E0E0;
+$light-gray: #9E9E9E;
+$overlay: #0004;
+
+$purple: #601FEB
