--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,14 +3,14 @@
   display: inline-flex;
   align-items: center;
   box-sizing: border-box;
-  height: rem-calc(45);
+  height: rem-calc(40);
   padding: 0 rem-calc(20);
-  border-radius: rem-calc(5);
+  border-radius: rem-calc(24);
   font-weight: 500;
   text-align: center;
 
   &.primary {
-    background: #0093dd;
+    background: $purple;
     color: #fff;
 
     &:disabled {
